@@ -564,18 +564,6 @@ fi
 AC_SUBST(AUDIT_LIBS)
 
 # ------------------------------------------------------------------------------
-have_qrencode=no
-AC_ARG_ENABLE(qrencode, AS_HELP_STRING([--disable-qrencode], [disable qrencode support]))
-if test "x$enable_qrencode" != "xno"; then
-        PKG_CHECK_MODULES(QRENCODE, [ libqrencode ],
-                [AC_DEFINE(HAVE_QRENCODE, 1, [Define if qrencode is available]) have_qrencode=yes], have_qrencode=no)
-        if test "x$have_qrencode" = xno -a "x$enable_qrencode" = xyes; then
-                AC_MSG_ERROR([*** qrencode support requested but libraries not found])
-        fi
-fi
-AM_CONDITIONAL(HAVE_QRENCODE, [test "$have_qrencode" = "yes"])
-
-# ------------------------------------------------------------------------------
 have_microhttpd=no
 AC_ARG_ENABLE(microhttpd, AS_HELP_STRING([--disable-microhttpd], [disable microhttpd support]))
 if test "x$enable_microhttpd" != "xno"; then
@@ -892,7 +880,6 @@ AC_MSG_RESULT([
         SMACK:                   ${have_smack}
         XZ:                      ${have_xz}
         GCRYPT:                  ${have_gcrypt}
-        QRENCODE:                ${have_qrencode}
         MICROHTTPD:              ${have_microhttpd}
         GNUTLS:                  ${have_gnutls}
         binfmt:                  ${have_binfmt}
